@@ -1,7 +1,7 @@
 /*
 Theme Name: DarkElements
 Theme URI: http://www.guidovanderleest.nl/darkelements
-Version: 5.4
+Version: 5.5
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: DarkElements is a free, clean, minimalistic, responsive, mobile-friendly WordPress theme. Features: sidebar, sidebar navigation, footer widgets, custom header image, custom background, custom logo to replace site title and tagline. For more info please check readme file. Enjoy.
@@ -69,12 +69,12 @@ body {background:#333; color:#ddd; font-family:'Open Sans', sans-serif; font-siz
 
 
 /* HEADINGS */
-h1 {font-size:2.25em; line-height:1.25em;}
-h2 {font-size:1.80em; line-height:1.25em;}
-h3 {font-size:1.45em; line-height:1.5em;}
-h4 {font-size:1.20em; line-height:1.5em;}
-h5 {font-size:1em; line-height:1.5em;}
-h6 {font-size:0.80em; line-height:2em;}
+h1 {clear:both; margin:0 0 10px; font-size:2.25em; line-height:1.25em;}
+h2 {clear:both; margin:0 0 10px; font-size:1.80em; line-height:1.25em;}
+h3 {clear:both; margin:0 0 10px; font-size:1.45em; line-height:1.5em;}
+h4 {clear:both; margin:0 0 10px; font-size:1.20em; line-height:1.5em;}
+h5 {clear:both; margin:0 0 10px; font-size:1em; line-height:1.5em;}
+h6 {clear:both; margin:0 0 10px; font-size:0.80em; line-height:2em;}
 
 
 /* LINKS AND HTML TAGS */
@@ -132,7 +132,8 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 /* SIDEBAR LOGO */
 .logo {clear:both; padding:0 0 20px; text-align:center;}
-.logo h2 {padding:5px 0; font-size:1.20em;}
+.logo h1 {margin:0;}
+.logo h2 {margin:0; padding:5px 0; font-size:1.20em;}
 .logo img {padding:10px 0 0;}
 
 
@@ -156,20 +157,20 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 
 /* SIDEBAR MENU TITLE */
-.nav-primary-title {clear:both; color:#ddd; padding:0 0 5px; margin:0 0 10px; border-bottom:1px solid #444;}
+.nav-primary-title {padding:0 0 5px; margin:0 0 10px; color:#ddd; border-bottom:1px solid #444;}
 
 
 /* WIDGETS */
 #sidebar-widgets {width:100%; clear:both; float:left;}
 .widget {margin:0 0 20px;}
-.widgettitle {clear:both; padding:0 0 5px; margin:0 0 10px; color:#ddd; border-bottom:1px solid #444;}
+.widgettitle {padding:0 0 5px; margin:0 0 10px; color:#ddd; border-bottom:1px solid #444;}
 
 
-/* CALENDAR WIDGET */
+/* NATIVE CALENDAR WIDGET */
 #wp-calendar th, #wp-calendar td {padding:5px;}
 
 
-/* MENU WIDGET */
+/* NATIVE MENU WIDGET */
 #sidebar-widgets .sub-menu li {margin:0 0 0 10px;}
 
 
@@ -183,7 +184,7 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 
 /* PAGE */
-.page-title {clear:both; margin:0 0 20px;}
+.page-title {margin:0 0 20px;}
 .archive-description {width:100%; clear:both; float:left; font-style:italic;}
 .pagelink {width:100%; clear:both; float:left; padding:20px 0 10px;}
 
@@ -191,10 +192,10 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 /* POST */
 .post-list {width:100%; clear:both; float:left;}
 .post-single {width:100%; clear:both; float:left;}
-.post-title {clear:both; margin:0 0 20px;}
-.post-title-single {clear:both; margin:0 0 20px;}
+.post-title {margin:0 0 20px;}
+.post-title-single {margin:0 0 20px;}
 .entry-content {width:100%; clear:both; float:left; margin:0 0 20px;}
-.sticky-title {clear:both; text-align:center; margin:0 0 20px; padding:2px 0; border-top:1px solid #444; border-bottom:1px solid #444;}
+.sticky-title {margin:0 0 20px; padding:2px 0; border-top:1px solid #444; border-bottom:1px solid #444; text-align:center;}
 .postmetadata {clear:both; margin:0 0 20px; padding:2px 0; border-top:1px solid #444; border-bottom:1px solid #444;}
 .more {width:100%; clear:both; float:left; margin:0 0 20px; padding:0 0 20px; border-bottom:1px solid #444;}
 a.readmore {float:right; text-decoration:none; padding:2px 5px; background:#ddd; color:#333; border-radius:5px;}
@@ -251,8 +252,8 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 .comment-body {background:none; border:1px solid #444; border-radius:5px; padding:10px; margin:0 0 20px;}
 .comment-content {padding:10px 0;}
 .comment-notes, .form-allowed-tags {font-size:0.80em; padding:5px 0;}
-.comments-title, .comment-reply-title, .no-comments {clear:both; font-size:1.45em;} 
-.comments-title {margin:0 0 20px;}
+.comments-title {margin:0 0 20px; font-size:1.45em;}
+.comment-reply-title, .no-comments {margin:0; font-size:1.45em;}
 .comment-author .avatar {margin:0 5px 0 0; border-radius:5px;}
 .bypostauthor .comment-content {font-style:italic;}
 .comment-awaiting-moderation {font-style:italic;}
