@@ -1,12 +1,15 @@
 CHANGELOG
 =========
 
+DarkElements version 5.5 - july 2017
+- file style and custom-editor-style: added clear and margin-bottom to headings
+
 DarkElements version 5.4 - june 2017
 - new jquery navigation for mobile screens
 - replaced select menu with toggle menu 
 - files nav, header and style: added and removed code regarding new navigation
 - files style and custom-editor-style: changed margin of several html tags to avoid margin collapsing
-- in case of a child theme that contains file header: please replace this file
+- if you're using a child theme that contains file header: copy-paste code regarding new navigation
 
 DarkElements version 5.3 - april 2017
 - file single: added post class .post-single
